mysql/check-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checker
  labels:
    team: check
