mysql/deny-all-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-network
  namespace: database
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
